--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,9 @@ main>* {
 
 #sliderSection {
     padding: 0;
+    width: 100%;
+    height: 40rem;
+    margin-bottom: 5rem;
 }
 
 .sliderContent {
@@ -81,25 +84,29 @@ main>* {
 
 .sliderContent section {
     position: absolute;
-    top: 40%;
-    left: 30%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    max-height: 40rem;
 }
 
 .sliderContent section p {
-    width: 60%;
     margin: 1.5rem 0;
 }
 
 .sliderContent section h1 {
-    margin: 0.5rem 0;
+    margin: 0.2rem 0;
 }
 
 .sliderContent img {
     inline-size: 100%;
+    max-height: 40rem;
 }
 
 #productsFlex {
@@ -118,7 +125,7 @@ main>* {
     text-align: center;
     margin: 10px;
     background: white;
-    border: 1px solid rgba(128, 128, 128, 0.208);
+    border: 1px solid var(--light-gray);
     padding: 0 1.5rem;
     grid-template-rows: 1fr auto 1fr;
     white-space: pre-line;
@@ -179,20 +186,33 @@ main>* {
 
 #showFurniture {
     display: grid;
+    padding: 0;
     grid-template-columns: 40% 1fr;
     grid-template-rows: 10% 1fr;
-    gap: 0px 0px;
+    background: white;
+    gap: 0px 15px;
     grid-template-areas:
         "aside header"
         "aside div";
 }
 
-#showFurniture aside {
-    width: 20%;
-}
 
 #showFurniture aside {
+    position: relative;
     grid-area: aside;
+    margin-left: 12.5rem;
+}
+
+#showFurniture aside h6{
+    position: absolute;
+    font-weight: 700;
+    top: 24px;
+    left:3rem ;
+}
+
+#showFurniture aside h6:nth-child(2) {
+    top: 53px;
+    color: var(--second-text);
 }
 
 #showFurniture header {
@@ -200,18 +220,32 @@ main>* {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 2px solid var(--light-gray);
+    margin-right: 12.5rem;
 }
 
 #showFurniture header img {
     inline-size: 3rem;
 }
 
+#showFurniture div {
+    gap: 1rem;
+}
+
 #showFurniture header ul {
     display: flex;
+    color: var(--second-text);
+    gap: 2rem;
+    padding: 0;
+}
+
+.selectedFurniture{
+    color: var(--primary);
 }
 
 #showFurniture header ul li {
     list-style: none;
+    cursor: pointer;
 }
 
 #showFurniture div {
