--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,13 @@ main>* {
 }
 
 #pageHeader {
-    height: 6rem;
     padding: 0;
+    margin: 0;
     background: white;
 }
 
 #pageHeader nav {
+    height: 6rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -75,14 +76,25 @@ main>* {
     width: 100%;
     height: 40rem;
     margin-bottom: 5rem;
+    overflow: hidden;
+    position: relative;
 }
 
-.sliderContent {
+.slides {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+
+.slideContainer {
     position: relative;
     color: white;
+    inline-size: 100%;
 }
 
-.sliderContent section {
+.slideContainer section {
     position: absolute;
     top: 0;
     left: 0;
@@ -96,17 +108,58 @@ main>* {
     max-height: 40rem;
 }
 
-.sliderContent section p {
+.slideContainer section p {
     margin: 1.5rem 0;
 }
 
-.sliderContent section h1 {
+.slideContainer section h1 {
     margin: 0.2rem 0;
 }
 
-.sliderContent img {
-    inline-size: 100%;
+.slideContainer img {
+    inline-size: 100vw;
     max-height: 40rem;
+}
+
+#prev,
+#next {
+    cursor: pointer;
+    position: absolute;
+    top: 65%;
+    width: auto;
+    padding: 0 2.25rem;
+    transition: 0.6s ease;
+    user-select: none;
+}
+
+#prev {
+    left: 0;
+}
+
+#next {
+    right: 0;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    position: absolute;
+    bottom: 3.5%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.bar {
+    height: 0.625rem;
+    width: 3.5rem;
+    margin: 0 5px;
+    background-color: #ffffff7b;
+    cursor: pointer;
+}
+
+.selectedBar {
+    background-color: white;
 }
 
 #productsFlex {
@@ -197,7 +250,7 @@ main>* {
         "aside div";
 }
 
-.furnitureInverted{
+.furnitureInverted {
     grid-template-columns: 1fr 0.4fr;
     grid-template-areas:
         "header aside"
@@ -266,7 +319,7 @@ main>* {
     cursor: pointer;
 }
 
-.showFurniture > div {
+.showFurniture>div {
     margin-top: 2.625rem;
     grid-area: div;
     margin-right: 12.5rem;
@@ -276,7 +329,7 @@ main>* {
     grid-template-rows: 1fr 1fr;
 }
 
-.furnitureInverted > div{
+.furnitureInverted>div {
     margin-right: 0;
     margin-left: 12.5rem;
 }
@@ -328,7 +381,7 @@ main>* {
     background: white;
 }
 
-.mostPopularInverted{
+.mostPopularInverted {
     grid-template-columns: 1fr 1.5fr;
     grid-template-rows: 1fr;
     padding-bottom: 3rem;
@@ -440,40 +493,40 @@ small {
 
 
 
-#bestSellersProducts header{
+#bestSellersProducts header {
     border-bottom: 2px solid var(--light-gray);
 }
 
-#bestSellersProducts div > section{
+#bestSellersProducts div>section {
     display: flex;
     flex-direction: column;
     text-align: left;
     align-items: flex-start;
 }
 
-#bestSellersProducts div > section > *:not(img) {
-    padding-left: 1.5rem; 
-  }
+#bestSellersProducts div>section>*:not(img) {
+    padding-left: 1.5rem;
+}
 
-#bestSellersProducts section h5{
+#bestSellersProducts section h5 {
     margin-top: 1.5rem;
     margin-bottom: 0.625rem;
 }
 
-#bestSellersProducts section a{
+#bestSellersProducts section a {
     text-decoration: none;
     color: var(--second-text);
     font-weight: 700;
 }
 
-#bestSellersProducts > div{
+#bestSellersProducts>div {
     margin-top: 1.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-#brands{
+#brands {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -482,44 +535,44 @@ small {
     padding-bottom: 3rem;
 }
 
-#featuredPosts{
+#featuredPosts {
     width: 100%;
     padding: 0;
     background: white;
 }
 
-#featuredPosts > *{
+#featuredPosts>* {
     padding: 0 12.5rem;
 }
 
-#featuredPosts > header h2{
+#featuredPosts>header h2 {
     padding: 0;
     margin: 0;
     margin-top: 0.625rem;
 }
 
-#featuredPosts > header{
+#featuredPosts>header {
     text-align: center;
     padding-top: 7rem;
     padding-bottom: 5rem;
 }
 
-#featuredPosts > header h6{
+#featuredPosts>header h6 {
     color: var(--primary);
 }
 
-#featuredPosts > div{
+#featuredPosts>div {
     display: flex;
     justify-content: space-between;
     gap: 10px;
 }
 
-#featuredPosts > div > section{
+#featuredPosts>div>section {
     position: relative;
 }
 
 
-#featuredPosts > div > section > button{
+#featuredPosts>div>section>button {
     width: 3.5rem;
     height: 1.5rem;
     padding: 0 0.625rem;
@@ -532,47 +585,47 @@ small {
     left: 1.25rem;
 }
 
-.adviceTopics{
+.adviceTopics {
     display: inline;
     margin-right: 15px;
     color: var(--second-text);
 }
 
-.adviceTopicsSelected{
+.adviceTopicsSelected {
     color: var(--primary) !important;
 }
 
-#featuredPosts{
+#featuredPosts {
     padding-bottom: 7rem;
 }
 
-#featuredPosts div > section {
-    -webkit-box-shadow: -3px 3px 7px -1px rgba(0,0,0,0.20);
-    -moz-box-shadow: -3px 3px 7px -1px rgba(0,0,0,0.20);
-    box-shadow: -3px 3px 7px -1px rgba(0,0,0,0.20);
+#featuredPosts div>section {
+    -webkit-box-shadow: -3px 3px 7px -1px rgba(0, 0, 0, 0.20);
+    -moz-box-shadow: -3px 3px 7px -1px rgba(0, 0, 0, 0.20);
+    box-shadow: -3px 3px 7px -1px rgba(0, 0, 0, 0.20);
 }
 
-#featuredPosts div > section > *:not(img):not(button) {
-    padding-left: 1.5rem; 
+#featuredPosts div>section>*:not(img):not(button) {
+    padding-left: 1.5rem;
 }
 
-#featuredPosts div > section > img {
+#featuredPosts div>section>img {
     margin-bottom: 1.5rem;
     inline-size: 100%;
 }
 
 
-#featuredPosts div > section > h4 {
+#featuredPosts div>section>h4 {
     max-width: 100%;
     margin: 10px 0;
 }
 
-#featuredPosts div > section > p {
+#featuredPosts div>section>p {
     color: var(--second-text);
     margin-bottom: 10px;
 }
 
-.adviceInfo{
+.adviceInfo {
     margin: 1.5rem 0;
     display: flex;
     justify-content: space-between;
@@ -580,88 +633,83 @@ small {
     padding-right: 1.5rem;
 }
 
-.adviceInfo div{
+.adviceInfo div {
     display: flex;
     gap: 5px;
 }
 
-.learnMore{
+.learnMore {
     cursor: pointer;
     display: flex;
     gap: 10px;
 }
 
-#siteFooter{
+#siteFooter {
     background-color: var(--text-color);
     color: white;
 }
 
-#siteFooter > * {
+#siteFooter>* {
     padding: 0 12.5rem;
 }
 
-#siteFooter > section {
+#siteFooter>section {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-#siteFooter > section {
+
+#siteFooter>section {
     padding-top: 5rem;
     padding-bottom: 1.5rem;
 }
-#siteFooter > section:first-child {
+
+#siteFooter>section:first-child {
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
 }
-#siteFooter > section button {
-   width: 10rem;
-   height: 3.25rem;
+
+#siteFooter>section button {
+    width: 10rem;
+    height: 3.25rem;
 }
 
-#siteFooter section h3{
+#siteFooter section h3 {
     margin: 0;
     display: inline;
 }
 
-#footerLinks{
+#footerLinks {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-#footerLinks section{
+#footerLinks section {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     gap: 10px;
 }
 
-#footerLinks section h5{
+#footerLinks section h5 {
     margin: 0;
     padding: 1.25rem 0;
 }
 
-#footerLinks section a{
+#footerLinks section a {
     text-decoration: none;
     color: white;
 }
 
-#footerLinks section div{
+#footerLinks section div {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
-#socialNetWorks{
+#socialNetWorks {
     display: flex;
     align-items: center;
     gap: 1.25rem;
 }
-
-
-
-
-
-
-
-
