--- a/index.css
+++ b/index.css
@@ -78,7 +78,67 @@ small{
     font-weight: 400;
 }
 
-.btn-text{
+.btnText{
     font-size: 0.875rem; /* 14px desktop */
     font-weight: 700;
 }
+
+.fadeOutLeft {
+    animation: fadeOutLeftAnimation 0.5s ease-out;
+  }
+  
+.fadeInRight {
+    animation: fadeInRightAnimation 0.5s ease-in;
+}
+
+@keyframes fadeOutLeftAnimation {
+    from {
+        opacity: 1;
+        transform: translateX(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+}
+  
+@keyframes fadeInRightAnimation {
+    from {
+        opacity: 0;
+        transform: translateX(20px); 
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.spinner {
+    animation: spinning linear 0.5s infinite;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 40%;
+    top: 45%;
+    transform: translateX(-50%);
+
+  }
+  
+  @keyframes spinning {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(90deg);
+    }
+    50% {
+      transform: rotate(180deg);
+    }
+    75% {
+      transform: rotate(270deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
