--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,7 @@ main>* {
     padding: 0 12.5rem;
 }
 
-.fullBleed {
-    grid-column: span 3;
-}
+
 
 #pageHeader {
     padding: 0;
@@ -21,6 +19,8 @@ main>* {
     justify-content: space-between;
     padding: 0 12.5rem;
 }
+
+
 
 #pageHeader section {
     display: flex;
@@ -67,7 +67,7 @@ main>* {
     color: var(--second-text);
 }
 
-.selectedHeader {
+.selectedHeader a {
     color: var(--text-color) !important;
 }
 
@@ -201,6 +201,15 @@ main>* {
     text-align: left;
 }
 
+.productCard:hover {
+    transition: scale 0.3s ease-in-out;
+    scale: 1.2;
+    z-index: 10;
+    opacity: 1;
+    cursor: pointer;
+}
+
+
 .productCard p {
     grid-column: 1;
     align-self: self-end;
@@ -317,6 +326,10 @@ main>* {
     cursor: pointer;
 }
 
+.showFurniture header ul li:hover {
+    color: var(--primary);
+}
+
 .showFurniture>div {
     margin-top: 2.625rem;
     grid-area: div;
@@ -329,11 +342,11 @@ main>* {
     overflow: hidden;
 }
 
-.showFurniture>div > section {
+.showFurniture>div>section {
     display: none;
 }
 
-.showFurniture>div > section:nth-child(-n+6) {
+.showFurniture>div>section:nth-child(-n+6) {
     display: block;
 }
 
@@ -345,6 +358,14 @@ main>* {
 .productFurniture {
     text-align: center;
 }
+
+.productFurniture:hover {
+    transition: scale 0.3s ease-in-out;
+    scale: 1.05;
+    z-index: 10;
+    cursor: pointer;
+}
+
 
 .productFurniture>h5 {
     margin-top: 1rem;
@@ -406,6 +427,7 @@ main>* {
 
 .mostPopularArticle>section {
     text-align: center;
+    position: relative;
     grid-area: product;
     width: 100%;
     display: flex;
@@ -512,6 +534,11 @@ small {
     align-items: flex-start;
 }
 
+#bestSellersProducts div>section:hover {
+    transition: scale 0.3s ease-in-out;
+    scale: 1.2;
+}
+
 #bestSellersProducts div>section>*:not(img) {
     padding-left: 1.5rem;
 }
@@ -578,7 +605,6 @@ small {
 #featuredPosts>div>section {
     position: relative;
 }
-
 
 #featuredPosts>div>section>button {
     width: 3.5rem;
@@ -722,3 +748,322 @@ small {
     gap: 1.25rem;
 }
 
+@media only screen and (max-width: 900px) {
+   
+    body {
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+      }
+
+    main>* {
+        padding: 0;
+    }
+
+    #pageHeader nav {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+        justify-content: space-between;
+        padding: 0;
+        margin: 0;
+    }
+    #pageHeader h3{
+        font-size: 1.2rem;
+        align-self: flex-start;
+        justify-self: flex-start;
+        padding-left: 1.2rem;
+    }
+
+    #pageHeader ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0;
+        padding-bottom: 4rem;
+    }
+
+    #pageHeader ul > li:last-child {
+        display: none;
+    }
+
+    #pageHeader aside {
+        position: absolute;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        justify-content: flex-end;
+        top: 1.5rem;
+        right: 1.2rem;
+    }
+
+    #pageHeader aside > section {
+        display: none;
+    }
+
+    #shopCounter, #heartCounter{
+        display: none;
+    }
+
+    .selectedHeader {
+        display: none;
+    }
+
+    .slideContainer img {
+        height: 40rem;
+        max-height: 100%;
+        object-fit: cover;
+    }
+
+    .showFurniture {
+        display: flex;
+        flex-direction: column;
+        margin-top: 5rem;
+        background: white;
+        max-width: 100%;
+    }
+
+    .showFurniture aside img {
+        width: calc(100% - 2rem);
+        padding: 0 1rem;
+    }
+
+    .showFurniture aside {
+        position: relative;
+        margin: 0;
+    }
+
+    .furnitureInverted aside {
+        margin: 0;
+    }
+
+
+    .showFurniture header {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin: 0;
+        padding-bottom: 1.5rem;
+    }
+
+    .furnitureInverted header {
+        margin: 0;
+    }
+
+    .showFurniture header img {
+        inline-size: auto;
+        cursor: pointer;
+    }
+
+
+    .showFurniture header ul {
+        display: flex;
+        color: var(--second-text);
+        gap: 2rem;
+        padding: 0;
+        padding-bottom: 1.2rem;
+    }
+
+    .selectedFurniture {
+        color: var(--primary);
+    }
+
+    .showFurniture header ul li {
+        list-style: none;
+        cursor: pointer;
+    }
+
+    .showFurniture header ul li:hover {
+        color: var(--primary);
+    }
+
+    .showFurniture>div>section {
+        display: none;
+    }
+
+    .showFurniture>div>section:nth-child(-n+6) {
+        display: block;
+    }
+
+    .furnitureInverted>div {
+        margin: 0;
+    }
+
+    .productFurniture {
+        text-align: center;
+    }
+
+    .productFurniture:hover {
+        transition: scale 0.3s ease-in-out;
+        scale: 1.05;
+        z-index: 10;
+        cursor: pointer;
+    }
+
+
+    .productFurniture>h5 {
+        margin-top: 1rem;
+        margin-bottom: 0.625rem;
+    }
+
+    .productFurniture a {
+        text-decoration: none;
+        color: var(--second-text);
+        font-weight: 700;
+    }
+
+    .prices {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .prices h5 {
+        margin: 0.625rem 0.3rem;
+    }
+
+    .realPrice {
+        color: var(--second-text);
+    }
+
+    .discountPrice {
+        color: var(--secundary);
+    }
+
+
+    .mostPopularArticle {
+        display: flex;
+        flex-direction: column;
+        max-width: 100%;
+        height: 100%;
+        background: white;
+    }
+
+
+    .mostPopularArticle>img {
+        height: auto;
+        width: 100%;
+        grid-area: img;
+    }
+
+
+    .mostPopularArticle>section {
+        text-align: center;
+        position: relative;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        background: white;
+    }
+
+
+    .mostPopularArticle footer {
+        margin: 0;
+        display: flex;
+        padding: 0;
+        width: 70%;
+        flex-direction: column;
+    }
+
+    .mostPopularArticle footer section {
+        display: flex;
+        align-items: center;
+        gap: 1.25rem;
+        width: 100%;
+        padding: 2rem 3rem;
+    }
+
+
+    .mostPopularArticle footer section h2,
+    h6,
+    small {
+        margin: 0;
+    }
+
+    .mostPopularArticle footer section h6 {
+        margin-bottom: 5px;
+    }
+
+    .mostPopularArticle footer section h2 {
+        color: var(--highlight);
+    }
+
+    .mostPopularSales {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: var(--second-text);
+        margin-bottom: 1.2rem;
+    }
+
+    .changeColor {
+        display: flex;
+    }
+
+    .circle {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        margin: 5px;
+        cursor: pointer;
+    }
+
+    #productsFlex {
+        display: flex;
+        width: 80%;
+        flex-direction: column;
+    }
+
+    .productCard:hover {
+        transition: scale 0.3s ease-in-out;
+        scale: 1.05;
+        z-index: 10;
+        opacity: 1;
+    }
+    
+
+    #bestSellersProducts>div {
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        flex-direction: column;
+    }
+
+    #brands{
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    #featuredPosts>* {
+        padding: 2.5rem;
+    }
+
+    #featuredPosts>div {
+        flex-direction: column;
+    }
+
+    #siteFooter {
+        width: 100%;
+        text-wrap: wrap;
+    }
+
+    #siteFooter>* {
+        padding: 0;
+        padding-left: 2rem;
+    }
+
+    #siteFooter>section {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #footerLinks {
+        flex-direction: column;
+    }
+
+}
