--- a/styles.css
+++ b/styles.css
@@ -818,12 +818,17 @@ small {
         object-fit: cover;
     }
 
+    #prev, #next, .pagination{
+        display: none;
+    }
+
     .showFurniture {
         display: flex;
         flex-direction: column;
         margin-top: 5rem;
         background: white;
         max-width: 100%;
+        margin-top: 0;
     }
 
     .showFurniture aside img {
@@ -849,11 +854,16 @@ small {
         padding-bottom: 1.5rem;
     }
 
+    .showFurniture header h5{
+        font-size: 1.5rem;
+    }
+
     .furnitureInverted header {
         margin: 0;
     }
 
     .showFurniture header img {
+        margin-top: 1rem;
         inline-size: auto;
         cursor: pointer;
     }
@@ -863,14 +873,14 @@ small {
         grid-area: div;
         margin-right: 12.5rem;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr ;
+        grid-template-rows: 1fr 1fr 1fr;
         gap: 0.25rem;
         width: 100%;
         overflow: hidden;
     }
     
-    .showFurniture>div>section:nth-child(-n+4) {
+    .showFurniture>div>section:nth-child(-n+3) {
         display: block;
     }
 
@@ -880,7 +890,13 @@ small {
 
     .productFurniture {
         text-align: center;
+        width: 100%;
     }
+
+    .productFurniture > * {
+        width: 100%;
+    }
+
 
     .productFurniture:hover {
         transition: scale 0.3s ease-in-out;
@@ -954,6 +970,7 @@ small {
         padding: 0;
         width: 70%;
         flex-direction: column;
+        padding-bottom: 8rem;
     }
 
     .mostPopularArticle footer section {
@@ -1059,6 +1076,15 @@ small {
         text-wrap: wrap;
     }
 
+    #siteFooter section {
+        align-items: flex-start;
+    }
+
+
+    #siteFooter section:first-child {
+        gap: 1rem;
+    }
+
     #siteFooter>* {
         padding: 0;
         padding-left: 2rem;
@@ -1071,6 +1097,15 @@ small {
 
     #footerLinks {
         flex-direction: column;
+    }
+
+    #siteFooter section:last-child{
+        flex-direction: column;
+        gap: 2rem;
+        text-align: left;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding-bottom: 3rem;
     }
 
 }
